and, most importantly, Aldoir Ventura <aldoir@users.sourceforge.net>
who gave us Uebimiau, on which Telaen is based, in the first place!

LICENSE:
Telaen is released under the GPL.


CHANGELOG:

----------------------------------------------------------------
Telaen:
----------------------------------------------------------------

1.1.0:

1.1.0-beta2:

 * Telaen is now aware of the SpamAssassin X-Spam-Level
   header, and allows users to control auto-SPAM detection
   sensitivity and SPAM folder autopopulation. For example,
   a user can specify a sensitivity of 2 (very sensitive),
   and all messages that have a X-Spam-Level of 2 or more
   will get auto-moved to the SPAM folder.

 * Bundled themes converted to be xhtml1.0 compliant.

 * Force magic_quotes_runtime to be disabled, since it
   conflicts with Smarty.

 * Fix issue with message lists when quotas are not used.

 * Provide ways to work around some issues with
   Redirects. We can now select whether these redirects
   are performed via HTTP redirects (the Location header)
   or via META REFRESH and Javascript (see $redirects_use_meta).
   Also, we can select whether the URLs used for redirects
   are absolute (as required by HTTP) or relative (see
   $redirects_are_relative).

 * New feature: mark as read/unread on message list

1.1.0-beta1:

 * Fixed problem with possible incorrect redirects. Instead
   of checking that $_SERVER['HTTPS'] is non-empty, we
   check explicitly for it being set to 'on'. The official
   PHP docs are misleading (wrong) here.

 * Add in extra/check_install.php.txt which performs some
   simple tests of your installation and setup.
   
 * No longer require short_open_tag.

 * Some under-the-hood code improvements.

 * Remove the SPAM folder from the list of
   "folders that stuff can be moved to by the
   user."

 * The Advanced HTML Editor is now TinyMCE, which
   is bundled with Telaen. Changes to the newmsg.htm
   template file may be required (depending on the